--- a/client/src/components/UI/Backdrop/Backdrop.scss
+++ b/client/src/components/UI/Backdrop/Backdrop.scss
@@ -6,5 +6,8 @@
     left: 0;
     top: 0;
     background-color: rgba(0,0,0,0.5);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .75s ease-in-out;
 }
 
