--- a/client/src/components/UI/Modal/Modal.scss
+++ b/client/src/components/UI/Modal/Modal.scss
@@ -9,7 +9,9 @@
     left: 15%;
     top: 30%;
     box-sizing: border-box;
-    transition: all 0.6s ease-out;
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0s, opacity 0.5s linear;
 }
 
 @media (min-width: 600px) {
