--- a/client/src/styles/Size.scss
+++ b/client/src/styles/Size.scss
@@ -1,5 +1,12 @@
-.full-screen{
+.full-screen {
   height: 100vh;
   width: 100vw;
 }
-.h-100{ height: 100%; }
+
+.h-100 {
+  height: 100%;
+}
+
+.w-10 {
+  width: 100%;
+}
