--- a/client/src/components/Survey/Survey.scss
+++ b/client/src/components/Survey/Survey.scss
@@ -32,13 +32,14 @@
 }
 
 .questions{
+  position: sticky;
+  top: 0;
   button{
     margin-bottom: 15px;
     margin-left: 10px;
     margin-right: 10px;
   }
   margin-top: 5vw;
-  border: 1px dashed #b71c1c;
   background-color: white;
 }
 
