working on filling surveys

--- a/client/src/components/Survey/Survey.scss
+++ b/client/src/components/Survey/Survey.scss
@@ -59,6 +59,11 @@
   border-bottom: 1px solid #ffd740 !important;
   padding: 20px 10px !important;
 }
+
+.question-fill{
+  padding-bottom: 10px;
+}
+
 @media (max-width: 426px) {
   .survey {
     form {
