--- a/client/src/styles/Input.scss
+++ b/client/src/styles/Input.scss
@@ -43,7 +43,7 @@
 .survey-field input[type=search]:not(.browser-default):focus:not([readonly]),
 .survey-field textarea.materialize-textarea:focus:not([readonly]) {
   border: 1px solid rgba(26,35,126,0.7);
-  box-shadow: 0px 0px 5px 0px  rgba(26,35,126,0.7);
+  box-shadow: 0 0 5px 0  rgba(26,35,126,0.7);
   outline: 0;
 }
 /* label underline focus color */
