Working on surveys passwords

--- a/client/src/components/Survey/Survey.scss
+++ b/client/src/components/Survey/Survey.scss
@@ -64,6 +64,12 @@
   padding-bottom: 10px;
 }
 
+.success{
+  margin-top: 5vw;
+  border: 2px dashed #1a237e;
+  padding: 20px 10px 50px;
+}
+
 @media (max-width: 426px) {
   .survey {
     form {
