--- a/client/src/components/Survey/Survey.scss
+++ b/client/src/components/Survey/Survey.scss
@@ -5,7 +5,7 @@
     font-size: 1.2rem;
   }
 
-  form {
+  form, .outline {
     margin-top: 5vw;
     border: 1px dashed $primary-red;
     padding: 20px;
@@ -70,6 +70,12 @@
   padding: 20px 10px !important;
 }
 
+.survey-list{
+  border-bottom: 1px solid $primary-yellow !important;
+  border-top: 1px solid $primary-yellow !important;
+  padding: 20px 10px !important;
+  margin-top: 3px;
+}
 .question-fill{
   padding-bottom: 10px;
 }
